// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`ThemeBuilder.build() shape produces _variables with root, mode, and breakpoints 1`] = `
{
  "breakpoints": {
    "--breakpoint-lg": "1200px",
    "--breakpoint-md": "1024px",
    "--breakpoint-sm": "768px",
    "--breakpoint-xl": "1440px",
    "--breakpoint-xs": "480px",
  },
  "mode": {
    "--color-bg": "var(--color-void)",
    "--color-muted": "var(--color-gray-300)",
    "--color-primary": "var(--color-ember)",
  },
  "root": {
    "--color-bone": "#e8e0d0",
    "--color-ember": "#ff2800",
    "--color-gray-300": "#666666",
    "--color-gray-600": "#333333",
    "--color-void": "#000000",
  },
}
`;

exports[`ThemeBuilder.build() shape produces _tokens with raw color values and mode mappings 1`] = `
{
  "colors": {
    "bone": "#e8e0d0",
    "ember": "#ff2800",
    "gray-300": "#666666",
    "gray-600": "#333333",
    "void": "#000000",
  },
  "modes": {
    "dark": {
      "bg": "#000000",
      "muted": "#666666",
      "primary": "#ff2800",
    },
    "light": {
      "bg": "#e8e0d0",
      "muted": "#333333",
      "primary": "#000000",
    },
  },
}
`;

exports[`ThemeBuilder.build() shape produces color references as CSS var() calls 1`] = `
{
  "bg": "var(--color-bg)",
  "bone": "var(--color-bone)",
  "ember": "var(--color-ember)",
  "gray-300": "var(--color-gray-300)",
  "gray-600": "var(--color-gray-600)",
  "muted": "var(--color-muted)",
  "primary": "var(--color-primary)",
  "void": "var(--color-void)",
}
`;

exports[`ThemeBuilder.build() shape produces complete build output 1`] = `
{
  "_tokens": {
    "colors": {
      "bone": "#e8e0d0",
      "ember": "#ff2800",
      "gray-300": "#666666",
      "gray-600": "#333333",
      "void": "#000000",
    },
    "modes": {
      "dark": {
        "bg": "#000000",
        "muted": "#666666",
        "primary": "#ff2800",
      },
      "light": {
        "bg": "#e8e0d0",
        "muted": "#333333",
        "primary": "#000000",
      },
    },
  },
  "_variables": {
    "breakpoints": {
      "--breakpoint-lg": "1200px",
      "--breakpoint-md": "1024px",
      "--breakpoint-sm": "768px",
      "--breakpoint-xl": "1440px",
      "--breakpoint-xs": "480px",
    },
    "mode": {
      "--color-bg": "var(--color-void)",
      "--color-muted": "var(--color-gray-300)",
      "--color-primary": "var(--color-ember)",
    },
    "root": {
      "--color-bone": "#e8e0d0",
      "--color-ember": "#ff2800",
      "--color-gray-300": "#666666",
      "--color-gray-600": "#333333",
      "--color-void": "#000000",
    },
  },
  "breakpoints": {
    "lg": 1200,
    "md": 1024,
    "sm": 768,
    "xl": 1440,
    "xs": 480,
  },
  "colors": {
    "bg": "var(--color-bg)",
    "bone": "var(--color-bone)",
    "ember": "var(--color-ember)",
    "gray-300": "var(--color-gray-300)",
    "gray-600": "var(--color-gray-600)",
    "muted": "var(--color-muted)",
    "primary": "var(--color-primary)",
    "void": "var(--color-void)",
  },
  "fontSizes": {
    "14": "0.875rem",
    "16": "1rem",
    "24": "1.5rem",
  },
  "fonts": {
    "body": "Georgia, serif",
    "mono": "monospace",
  },
  "mode": "dark",
  "modes": {
    "dark": {
      "bg": "void",
      "muted": "gray-300",
      "primary": "ember",
    },
    "light": {
      "bg": "bone",
      "muted": "gray-600",
      "primary": "void",
    },
  },
  "space": {
    "0": "0",
    "16": "1rem",
    "4": "0.25rem",
    "8": "0.5rem",
  },
}
`;

exports[`serializeTokens produces token references and variable declarations 1`] = `
{
  "tokens": {
    "blue": "var(--color-blue)",
    "red": "var(--color-red)",
  },
  "variables": {
    "--color-blue": "#00f",
    "--color-red": "#f00",
  },
}
`;

exports[`serializeTokens handles nested/flattened color objects 1`] = `
{
  "tokens": {
    "gray-300": "var(--color-gray-300)",
    "gray-600": "var(--color-gray-600)",
  },
  "variables": {
    "--color-gray-300": "#666",
    "--color-gray-600": "#333",
  },
}
`;

exports[`createTheme minimal breakpoints-only theme has _variables.breakpoints 1`] = `
{
  "breakpoints": {
    "--breakpoint-lg": "1200px",
    "--breakpoint-md": "1024px",
    "--breakpoint-sm": "768px",
    "--breakpoint-xl": "1440px",
    "--breakpoint-xs": "480px",
  },
}
`;
